# ai-action-harness

./: .gitignore  README.md  pyproject.toml  run.cmd
config/: mcp_registry.yaml  mcp_wrappers.config.json  models.yaml
docker/: Dockerfile  compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HarnessPrompt.vue  McpPrompt.vue
mcp_sse_wrappers/: mcp_runner.js  mcp_wrappers.config.json
src/: ai_health.py  harness.py  mcp_bridge.py  models.py  server.py  webserver.py
tests/: test_ai_health.py  test_infrastructure.py  test_models.py
