[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-action-harness"
version = "0.1.0"
description = "LangGraph backed harness that provides @Actions (skills + role) with configurable model-to-action routing and MCP connections to Flash models for cost savings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
